@@ -28,8 +28,8 @@ const routes: Routes = [{
   canActivate: [AuthGuard],
   loadChildren: () => import('./modules/settings/settings.module').then(m => m.SettingsModule)
 }, {
-  path: 'order',
-  loadChildren: () => import('./modules/order/order.module').then(m => m.OrderModule)
+  path: 'invoice',
+  loadChildren: () => import('./modules/invoice/invoice.module').then(m => m.InvoiceModule)
 }, {
   path: '404',
   loadChildren: () => import('./modules/not-found/not-found.module').then(m => m.NotFoundModule)
