@@ -2,7 +2,7 @@
     <div *ngIf="item && !loading.isRunning(); else loadingTemplate">
         <p class="text-center mb-2">You are able to track your order here!</p>
         <div class="alert alert-danger mb-3" *ngIf="item?.isPaid && item?.status == 'new'">Your payslip was rejected! Please upload again!</div>
-        <order-receipt [item]="item" [showDeliveryDetails]="item.status !== 'new'" [isPublic]="true" [showStatusDetails]="item.status !== 'new'"></order-receipt>
+        <ws-invoice [item]="item" [showDeliveryDetails]="item.status !== 'new'" [isPublic]="true" [showStatusDetails]="item.status !== 'new'"></ws-invoice>
         <div *ngIf="item.status === 'new'" class="row no-gutters justify-content-center">
             <div class="mb-3 mr-lg-2 col-lg-3">
                 <button class="btn btn-receipt" [disabled]="uploadLoading.isRunning()" onclick="document.getElementById('updatePayslipInput').click()">Upload Payslip</button>
