@@ -1,15 +1,15 @@
 import { NgModule } from '@angular/core';
 import { Routes, RouterModule } from '@angular/router';
-import { OrderComponent } from '@components/order/order.component';
+import { InvoiceComponent } from '@components/invoice/invoice.component';
 
 
 const routes: Routes = [{
   path: '',
-  component: OrderComponent
+  component: InvoiceComponent
 }];
 
 @NgModule({
   imports: [RouterModule.forChild(routes)],
   exports: [RouterModule]
 })
-export class OrderRoutingModule { }
+export class InvoiceRoutingModule { }
