@@ -7,6 +7,7 @@
 - 2020-12-27                                -
 ---------------------------------------------
 .: WSM: Task: Mark order as self-pickup (WSM-257)
+.: WSW: Task: Rename order to invoice (WSW-94)
 
 ---------------------------------------------
 - 2020-12-26                                -
